# pfred-api

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/server/: __init__.py  app.py  utils.py
app/server/core/: utils.py
app/server/models/: Info.py  ScriptUtilities.py
app/server/routes/: ActivityModel.py  Info.py  OffTargetSearch.py  ScriptUtilities.py
old/: siRNA_OffTargetSearch_bowtie.pl  siRNA_OffTargetSearch_bowtie.py
pfred/data/: load.py
pfred/search/: __init__.py  mergeEx.py
